--- a/index.Rmd
+++ b/index.Rmd
@@ -18,43 +18,56 @@ always_allow_html: yes
 
 # About this workshop {-}
 
-Causal mediation analysis provides a rigorous framework for developing
-a mechanistic understanding of _how_ an exposure impacts an outcome, a central
-goal in epidemiology and allied health sciences. Beginning with an overview of
-classical direct and indirect effects, this workshop will present recent
-advances that overcome their existing limitations, including (i) restriction to
-binary exposures and static interventions, (ii) effects identifiable only in the
-absence of intermediate confounders affected by exposure, and (iii)
-a restrictive assumption on independence of "cross-world" counterfactuals.
-Emphasis will be placed on flexible, stochastic and interventional direct and
-indirect effects, highlighting how these may be brought to bear on substantive
-epidemiological questions from real-world studies. Multiply robust,
-nonparametric estimators of these causal effects, and free and open source `R`
-packages (`medshift` and `medoutcon`) for their application, will be introduced.
+Causal mediation analysis can provide a mechanistic understanding of how an exposure impacts 
+an outcome, a central goal in epidemiology and health sciences. However, rapid methodologic 
+developments coupled with few formal courses presents challenges to implementation. Beginning 
+with an overview of classical direct and indirect effects, this workshop will present recent 
+advances that overcome limitations of previous methods, allowing for: (i) continuous exposures, 
+(ii) multiple, non-independent mediators, and (iii) effects identifiable in the presence of 
+intermediate confounders affected by exposure. Emphasis will be placed on flexible, stochastic 
+and interventional direct and indirect effects, highlighting how these may be applied to answer 
+substantive epidemiological questions from real-world studies. Multiply robust, nonparametric 
+estimators of these causal effects, and free and open source `R` packages (`medshift` and 
+`medoutcon`) for their application, will be introduced.
 
-To ensure translation to real-world data analysis, this workshop will
-incorporate hands-on `R` programming exercises to allow participants practice in
-implementing the statistical tools presented. It is highly recommended that
-participants have working knowledge of the basic notions of causal inference,
-including counterfactuals and identification (linking the causal effect to
-a parameter estimable from the observed data distribution). Familiarity with the
-`R` programming language will be essential.
+To ensure translation to real-world data analysis, this workshop will incorporate hands-on `R` 
+programming exercises to allow participants practice in implementing the statistical tools 
+presented. It is recommended that participants have working knowledge of the basic notions of 
+causal inference, including counterfactuals and identification (linking the causal effect to a 
+parameter estimable from the observed data distribution). Familiarity with the `R` programming 
+language is also recommended.
+
 
 ## Workshop schedule {#schedule}
 
-TODO
+* 10-10:30 introductions/mediation set up
+* 10:30-11 estimands and how to choose
 
-* Motivations
-* Path Analysis: A History
-* The Natural Direct/Indirect Effects
-* Interventional Direct/Indirect Effects
-* Stochastic Direct/Indirect Effects
+* 11-11:30 discussion: how to choose in real-world examples
+
+* 11:30-noon shift parameter introduction with application in the lecture part
+
+* Noon-12:15 break/discussion
+
+* 12:15-12:45 estimation for natural direct and indirect effects, interventional direct and indirect effects
+* 12:45-1:15 practice: code for estimation
+
+* 1:15 -1:30 estimation for stochastic interventional direct and indirect effects
+* 1:30-1:50 practice: code for estimation
+
+* 1:50-2 wrap up
 
 ## About the authors {-}
 
 ### Iván Díaz {-}
 
-TODO
+My research focuses on the development of non-parametric statistical methods for 
+causal inference from observational and randomized studies with complex datasets, 
+using machine learning. This includes but is not limited to mediation analysis, 
+methods for continuous exposures, longitudinal data including survival analysis, 
+and efficiency guarantees with covariate adjustment in randomized trials. I am 
+also interested in general semi-parametric theory, machine learning, and 
+high-dimensional data.
 
 ### Nima Hejazi {-}
 
@@ -75,7 +88,17 @@ source software development for applied statistics.
 
 ### Kara Rudolph {-}
 
-TODO
+I am an Assistant Professor of Epidemiology at Columbia University. My research 
+interests are in developing and applying causal inference methods to understand 
+social and contextual influences on mental health, substance use, and violence 
+in disadvantaged, urban areas of the United States. My current work focuses on 
+developing methods for transportability and mediation, and subsequently applying 
+those methods to understand how aspects of the school and peer environments mediate 
+relationships between neighborhood factors and adolescent drug use across populations. 
+More generally, my work on generalizing/ transporting findings from study samples 
+to target populations and identifying subpopulations most likely to benefit from 
+interventions contributes to efforts to optimally target available policy and program 
+resources.
 
 <!--
 # Acknowledgements {-}
