nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -274,11 +274,12 @@
 
 This open source, reproducible vignette is for a half-day workshop on modern
 methods for \emph{causal mediation analysis}, given at the \href{}{SER 2021 Meeting} on
-Monday, 24 May 2021.
+Monday, 24 May 2021. While we encourage use of this \texttt{bookdown} site, for
+convenience, we have also made these workshop materials \href{https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf}{available in
+PDF}.
 
-\hypertarget{about-this-workshop}{%
-\chapter*{About this workshop}\label{about-this-workshop}}
-
+\hypertarget{about}{%
+\section{About this workshop}\label{about}}
 
 Causal mediation analysis can provide a mechanistic understanding of how an
 exposure impacts an outcome, a central goal in epidemiology and health sciences.
