nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -272,10 +272,10 @@
 \chapter*{Welcome to SER!}\label{welcome-to-ser}}
 
 
-This open source, reproducible vignette is for a half-day workshop on modern
-methods for \emph{causal mediation analysis}, given at the \href{}{SER 2021 Meeting} on
-Monday, 24 May 2021. While we encourage use of this \texttt{bookdown} site, for
-convenience, we have also made these workshop materials \href{https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf}{available in
+This open source, reproducible vignette accompanies a half-day workshop on
+modern methods for \emph{causal mediation analysis}, given at the \href{}{SER 2021
+Meeting} on Monday, 24 May 2021. While we encourage use of this \texttt{bookdown}
+site, for convenience, we have also made these workshop materials \href{https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf}{available in
 PDF}.
 
 \hypertarget{about}{%
@@ -336,9 +336,8 @@ parameter estimable from the observed data distribution). Familiarity with the
 
 \textbf{NOTE: All times listed in Pacific Time.}
 
-\hypertarget{about-the-instructors}{%
-\section*{About the instructors}\label{about-the-instructors}}
-
+\hypertarget{instructors}{%
+\section{About the instructors}\label{instructors}}
 
 \hypertarget{ivuxe1n-duxedaz}{%
 \subsection*{Iván Díaz}\label{ivuxe1n-duxedaz}}
