nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -241,7 +241,7 @@
 
 \title{{[}SER 2021 Workshop{]} Causal Mediation: Modern Methods for Path Analysis}
 \author{Iván Díaz, Nima Hejazi, Kara Rudolph}
-\date{updated: March 23, 2021}
+\date{updated: March 29, 2021}
 
 \begin{document}
 \maketitle
@@ -406,14 +406,14 @@ ggfortify & 0.4.11 & CRAN (R 4.0.4)\tabularnewline
 ggplot2 & 3.3.3 & CRAN (R 4.0.4)\tabularnewline
 kableExtra & 1.3.4 & CRAN (R 4.0.4)\tabularnewline
 knitr & 1.31 & CRAN (R 4.0.4)\tabularnewline
-medoutcon & 0.1.0 & Github (nhejazi/medoutcon@f8f14c4)\tabularnewline
+medoutcon & NA & NA\tabularnewline
 medshift & 0.1.4 & Github (nhejazi/medshift@f9e11a9)\tabularnewline
 mvtnorm & 1.1-1 & CRAN (R 4.0.4)\tabularnewline
 origami & 1.0.3 & CRAN (R 4.0.4)\tabularnewline
 readr & 1.4.0 & CRAN (R 4.0.4)\tabularnewline
 rmarkdown & 2.7.4 & Github (rstudio/rmarkdown@1450461)\tabularnewline
 skimr & 2.1.3 & CRAN (R 4.0.4)\tabularnewline
-sl3 & 1.4.3 & Github (tlverse/sl3@3950846)\tabularnewline
+sl3 & 1.4.2 & Github (tlverse/sl3@a119d47)\tabularnewline
 stringr & 1.4.0 & CRAN (R 4.0.4)\tabularnewline
 tibble & 3.1.0 & CRAN (R 4.0.4)\tabularnewline
 tidyr & 1.1.3 & CRAN (R 4.0.4)\tabularnewline
