--- a/03-natural.Rmd
+++ b/03-natural.Rmd
@@ -1,3 +1,38 @@
-# The Natural Direct and Indirect Effects {#natural}
+# How to choose an estimand: real world example {#estimandirl}
 
-[TO FILL IN]
+
+## Example: comparative effectivness of two medications for opioid use disorder (OUD)
+
+```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
+knitr::include_graphics("img/ctndag.pdf")
+```
+
+Motivation: Opposite overall treatment effects for homeless vs nonhomeless participants
+
+```{r , echo=FALSE, fig.cap="", out.width = '50%'}
+knitr::include_graphics("img/tmleesttotal.pdf")
+```
+
+### Getting specific about the question
+
+To what extent does the indirect effect through mediators of adherence, pain, and depressive symptoms explain the differences in treatment effects on OUD relapse for homeless and nonhomeless individuals?
+
+What estimand do we want? 
+
+- Can we set $M=m$ (i.e., same value) for everyone?
+- Are we interested in estimating indirect effects?
+
+$\rightarrow$ So not controlled effects
+
+- Do we have an intermediate confounder? 
+ + Yes, and it's important
+ 
+$\rightarrow$ So not natural effects
+
+- So, interventional direct and indirect effects
+- Do we want to estimate the path through treatment initiation ($Z$)?
+ + Yes, so not conditional versions of these effects
+ + Estimands: direct effect: $E(Y_{1,g_0} - Y_{0,g_0})$; indirect effect: $E(Y_{1,g_1} - Y_{1,g_0})$
+- Need to incorporate multiple and continuous mediators
+
+
