--- a/05-stochastic.Rmd
+++ b/05-stochastic.Rmd
@@ -1,4 +1,195 @@
-# The Stochastic Direct and Indirect Effects {#stochastic}
+# Estimation of natural direct and indirect effects, interventional direct and indirect effects
 
-[TO FILL IN]
+# Interventional direct and indirect effects
+
+Recall:
+
+```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
+knitr::include_graphics("medDAG2.pdf")
+```
+
+We define the interventional direct effect as:
+$$PIDE = E(Y_{a^\prime,g_{M \mid a^\star,W}}) - E(Y_{a\star,g_{M \mid a^\star,W}})$$, 
+
+and the interventional indirect effect as:
+$$PIIE = E(Y_{a^\prime,g_{M \mid a^\prime,W}}) - E(Y_{a^\prime,g_{M \mid a^\star,W}})$$.
+
+## Simple case for intuition
+
+$O=(W, A, Z, M, Y)$
+
+This SCM is represented in the above DAG and the following causal models: $W=f(U_W)$, $A=f(U_A)$, $Z=f(A, W, U_Z)$, $M=f(Z,A, W,U_M)$, and $Y=f(M,Z,A,W,U_Y)$, where ($U_W, U_A, U_Z, U_M, U_Y$) are exogenous random errors. 
+We assume $A$ is a single binary treatment, $Z$ is a single binary intermediate confounder, $M$ is a single binary mediator. There are no restrictions on the distribution of $W$ or $Y$. 
+
+$g_{M \mid a^\prime,W}$ represents a stochastic draw from the counterfactual, conditional distribution of $M$, as described by \citet{vanderweele2016mediation}: 
+$$g_{M|A,W}(m,a^*,W) \equiv g_{M|a^*,W}(W) = \sum_{z=0}^1 P(M=1|Z=z,W)P(Z=z | A=a^*, W).$$ 
+In what follows, we are going to assume that $g_{M|A,W}(m,a^*,W)$ is known, estimated from observed data, which we call $\hat{g}_{M|a^*,W}$. This is going to slightly alter the usual identification assumptions such that we no longer need to assume exchangeability of $A$ and the counterfactual $M$ values. This means the remaining assumptions are the same as those for controlled direct effects. 
+
+
+### How to estimate using g-computation
+
+The estimand $E(Y_{a^\prime,\hat{g}_{M|a^\star,W}})$ can be identified via sequential regression, which provides the framework for the g-computation-based estimator.
+
+1. Fit a regression of $Y$ on $M,Z,W$. Predict outcome values under under $M=m$. We'll call the result $\bar{Q}_Y(M,Z,W)$.
+2. Integrate out $M$ under our stochastic intervention $\hat{g}_{M|a^*,W}$. We can do this by evaluating $E(Y|M=m,Z=z,W)$ at each $m$ and multiplying it by the probability that $M=m$ under $\hat{g}_{M|a^*,W}$, summing over all $m$. We'll call the results $\bar{Q}^{g}_M(Z,W)$.
+3. Integrate out $Z$ and set $A=a^\prime$. Again, we can do this by evaluating the predicted values from Step 2, setting $A=a^\prime$, and at each $z$, multiplying the prediction by the probability that $Z=z$ under $A=a^\prime$. We'll call the result $\bar{Q}^{a^\prime}_Z(W)$.
+4. Taking the sample mean (marginalizing over $W$) gives the parameter estimate. 
+
+### How to estimate using the doubly robust methods that rely on the EIF
+
+The EIC for the parameter $\Psi(P)(a^\prime, \hat{g}_{M|a^\star,W})$, where, again, $\hat{g}_{M|a^\star,W}$ is assumed known, is given by:
+
+$$
+\begin{align}
+    D^*(a^\prime, \hat{g}_{M|a^*,W}) &= \sum_{k=0}^2 D_k^*(a^\prime, \hat{g}_{M|a^*,W}), \text{ where }\\
+    D^*_0(a^\prime, \hat{g}_{M|a^*,W}) &= \bar{Q}^{a^\prime}_Z(W) - \Psi(P)(a^\prime, \hat{g}_{M|a^*,W})\\
+    D^*_1(a^\prime, \hat{g}_{M|a^*,W}) &= \frac{I(A=a^\prime)}{P(A=a^\prime | W)}(\bar{Q}^{\hat{g}}_M(Z,W) - \bar{Q}^{a^\prime}_Z(W))\\
+    D^*_2(a^\prime, \hat{g}_{M|a^*,W}) &= \frac{I(A=a^\prime)\{I(M=1)\hat{g}_{M|a^*,W} + I(M=0)(1-\hat{g}_{M|a^*,W}) \}}{P(A=a^\prime
+    &\times (Y-\bar{Q}_Y(M,Z,W)).  
+\end{align}
+$$
+
+### How to estimate using TMLE
+
+1. We estimate $g_{Z|a^*,W}(W)=P(Z=1 | A=a^*, W)$ from a logistic regression of $Z$ on $A, W$ setting $A=a^*$. 
+
+2. We then estimate $g_{M|z,W}(W)=P(M=1 | Z=z, W)$ from a logistic regression of $M$ on $Z, W$, setting $z=\{0,1\}$. 
+
+3. We use these quantities to calculate $\hat{g}_{M|a^*,W} = \hat{g}_{M|z=1,W}\hat{g}_{Z|a^*,W} +  \hat{g}_{M|z=0,W}(1-\hat{g}_{Z|a^*,W})$. 
+
+```{r, echo=TRUE,eval=FALSE}
+zmodel<-"z ~ a + w1 "
+mmodel<-"m ~ z + w1"
+ymodel<-"y ~ m + z*w1"
+
+#make gm
+zfit<-glm(formula=zmodel, family="binomial", data=obsdat)
+mfit<-glm(formula=mmodel, family="binomial", data=obsdat)
+
+za0<-predict(zfit, newdata=data.frame(w1=obsdat$w1, a=0), type="response")
+za1<-predict(zfit, newdata=data.frame(w1=obsdat$w1, a=1), type="response")
+
+mz1<-predict(mfit, newdata=data.frame(w1=obsdat$w1, z=1), type="response")
+mz0<-predict(mfit, newdata=data.frame(w1=obsdat$w1, z=0), type="response")
+
+gm0<-(mz1*za0) + (mz0*(1-za0))
+gma1<-(mz1*za1) + (mz0*(1-za1))
+```
+
+4. To obtain an estimate of $\bar{Q}_{Y}(M,Z,W)$, predict values of $Y$ from a regression of $Y$ on $M,Z,W$, setting $m=1$ and $m=0$, giving $\hat{Y}(m=1, z, w)$ and $\hat{Y}(m=0, z, w)$. 
+
+```{r, echo=TRUE,eval=FALSE}
+tmpdat$qyinit<-cbind(predict(glm(formula=ymodel, family="binomial", data=data.frame(cbind(datw, z=z, m=m, y=y))), newdata=data.frame(cbind(datw, z=z, m=m)), type="response"), 
+    predict(glm(formula=ymodel, family="binomial", data=data.frame(cbind(datw, z=z, m=m, y=y))), newdata=data.frame(cbind(datw, z=z, m=0)), type="response"),
+    predict(glm(formula=ymodel, family="binomial", data=data.frame(cbind(datw, z=z, m=m, y=y))), newdata=data.frame(cbind(datw, z=z, m=1)), type="response"))
+```
+ 
+5. Estimate the weights to be used for the initial targeting step:
+$$h_1(a) = \frac{I(A=a)\{I(M=1)\hat{g}_{M|a^*,W} + I(M=0)(1-\hat{g}_{M|a^*,W}) \}}{P(A=a)\{I(M=1)g_{M|Z,W} + I(M=0)(1-g_{M|Z,W}) \}}$$ 
+```{r, echo=TRUE,eval=FALSE}
+psa1<-I(a==1)/mean(a)
+  psa0<-I(a==0)/mean(1-a)
+  mz<-predict(glm(formula=mmodel, family="binomial", data=data.frame(cbind(datw, z=z, m=m))), newdata=data.frame(cbind(datw, z=z)), type="response")
+  psm<-(mz*m) + ((1-mz)*(1-m))
+  
+  tmpdat$ha1gma1<-((m*gma1 + (1-m)*(1-gma1))/psm) * psa1 * svywt
+  tmpdat$ha1gma0<-((m*gm + (1-m)*(1-gm))/psm) * psa1 * svywt
+  tmpdat$ha0gma0<-((m*gm + (1-m)*(1-gm))/psm) * psa0 * svywt
+```
+
+6. Estimate $\hat{\epsilon}$ by setting $\epsilon$ as the intercept of a weighted logistic regression model of $Y$ with $logit(\hat{\bar{Q}}_{Y}(M,Z,W))$ as an offset and weights $\hat{h}_{1}(a)$. (Note that this is just one possible TMLE.)
+
+7. The estimate of $\bar{Q}_{Y}(M,Z,W)$ is updated by $ \hat{\bar{Q}}^*_{Y}(M,Z,W) =  \hat{\bar{Q}}_{Y}(\epsilon_n)(M,Z,W).$ 
+
+```{r, echo=TRUE,eval=FALSE}
+#for E(Y_{1,gmastar})
+  epsilonma1g0<-coef(glm(y ~  1 , weights=tmpdat$ha1gma0, offset=(qlogis(qyinit[,1])), family="quasibinomial", data=tmpdat))
+  tmpdat$qyupm0a1g0<-plogis(qlogis(tmpdat$qyinit[,2]) + epsilonma1g0)
+  tmpdat$qyupm1a1g0<-plogis(qlogis(tmpdat$qyinit[,3]) + epsilonma1g0)
+  #for E(Y_{1,gma})
+  epsilonma1g1<-coef(glm(y ~  1 , weights=tmpdat$ha1gma1, offset=(qlogis(qyinit[,1])), family="quasibinomial", data=tmpdat))
+  tmpdat$qyupm0a1g1<-plogis(qlogis(tmpdat$qyinit[,2]) + epsilonma1g1)
+  tmpdat$qyupm1a1g1<-plogis(qlogis(tmpdat$qyinit[,3]) + epsilonma1g1)
+  #for E(Y_{0,gmastar})
+  epsilonma0g0<-coef(glm(y ~  1 , weights=tmpdat$ha0gma0, offset=(qlogis(qyinit[,1])), family="quasibinomial", data=tmpdat))
+  tmpdat$qyupm0a0g0<-plogis(qlogis(tmpdat$qyinit[,2]) + epsilonma0g0)
+  tmpdat$qyupm1a0g0<-plogis(qlogis(tmpdat$qyinit[,3]) + epsilonma0g0)
+```
+
+8. We next integrate out $M$ from $\bar{Q}^*_{Y}(M,Z,W)$. First, we estimate $\bar{Q}^*_{Y,n}(M,Z,W)$ setting $m=1$ and $m=0$, giving $\bar{Q}^*_Y(m=1, z, w)$ and $\bar{Q}^*_Y(m=0, z, w)$. Then, multiply these predicted values by their probabilities under $\hat{g}_{M|a^*,W}(W)$ (for $a \in \{a, a^{*}\}$), and add them together (i.e., $\bar{Q}^{\hat{g}}_{M,n}(Z,W)= \hat{Q}^*_Y(m=1, z, w)\hat{g}_{M|a^*,W} + \hat{Q}^*_Y(m=0, z, w)(1-\hat{g}_{M|a^*,W})$).
+
+```{r, echo=TRUE,eval=FALSE}
+  tmpdat$Qma1g0<-tmpdat$qyupm0a1g0*(1-gm) + tmpdat$qyupm1a1g0*gm
+  tmpdat$Qma1g1<-tmpdat$qyupm0a1g1*(1-gma1) + tmpdat$qyupm1a1g1*gma1
+  tmpdat$Qma0g0<-tmpdat$qyupm0a0g0*(1-gm) + tmpdat$qyupm1a0g0*gm
+```
+
+9. We now fit a regression of $\bar{Q}^{\hat{g},*}_{M,n}(Z,W)$ on $W$ among those with $A=a^\prime$. We call the predicted values from this regression $\hat{\bar{Q}}^{a^\prime}_{Z}(W)$. 
+
+```{r, echo=TRUE,eval=FALSE}
+  Qzfita1g0<-glm(formula=paste("Qma1g0", qmodel, sep="~"), data=tmpdat[tmpdat$a==1,], family="quasibinomial")
+  Qzfita1g1<-glm(formula=paste("Qma1g1", qmodel, sep="~"), data=tmpdat[tmpdat$a==1,], family="quasibinomial")
+  Qzfita0g0<-glm(formula=paste("Qma0g0", qmodel, sep="~"), data=tmpdat[tmpdat$a==0,], family="quasibinomial")
+  
+  Qza1g0<-predict(Qzfita1g0, type="response", newdata=tmpdat)
+  Qza1g1<-predict(Qzfita1g1, type="response", newdata=tmpdat)
+  Qza0g0<-predict(Qzfita0g0, type="response", newdata=tmpdat)
+```
+
+(Note that if $A$ were not randomly assigned, we would complete a second targeting step.)
+
+10. The empirical mean of these predicted values is the TML estimate of $\Psi(P)(a^\prime, \hat{g}_{M|a^*,W})$.
+
+```{r, echo=TRUE,eval=FALSE}
+  tmlea1m0<-sum(Qzupa1g0*svywt)/sum(svywt)
+  tmlea1m1<-sum(Qzupa1g1*svywt)/sum(svywt)
+  tmlea0m0<-sum(Qzupa0g0*svywt)/sum(svywt)
+```
+
+11. Repeat the above steps for each of the interventions. For example, for binary $A$, we would execute these steps a total of three times to estimate: 1) $\Psi(P)(1,\hat{g}_{M|1,W})$, 2) $\Psi(P)(1,\hat{g}_{M|0W})$, and 3) $\Psi(P)(0,\hat{g}_{M|0,W})$. 
+
+12. The PIDE can then be obtained by substituting estimates of parameters $\Psi(P)(a,\hat{g}_{M|a^*,W}) - \Psi(P)(a^*,\hat{g}_{M|a^*,W})$ and the PIIE can be obtained by substituting estimates of parameters $\Psi(P)(a,\hat{g}_{M|a,W}) - \Psi(P)(a,\hat{g}_{M|a^*,W})$.
+
+```{r, echo=TRUE,eval=FALSE}
+  nde<-tmlea1m0-tmlea0m0
+  nie<-tmlea1m1-tmlea1m0
+```
+
+13. The variance can be estimated as the sample variance of the EIF (defined above, substituting in the targeted fits) divided by $n$.
+
+```{r, echo=TRUE,eval=FALSE}
+#first get EIF
+  tmpdat$qyupa1g0<-plogis(qlogis(tmpdat$qyinit[,1]) + epsilonma1g0)
+  tmpdat$qyupa1g1<-plogis(qlogis(tmpdat$qyinit[,1]) + epsilonma1g1)
+  tmpdat$qyupa0g0<-plogis(qlogis(tmpdat$qyinit[,1]) + epsilonma0g0)
+
+  eic1a1g0<-tmpdat$ha1gma0 * (tmpdat$y - tmpdat$qyupa1g0)
+  eic2a1g0<-psa1*svywt*(tmpdat$Qma1g0- Qzupa1g0)
+  eic3a1g0<-Qzupa1g0-tmlea1m0
+  eica1g0<-eic1a1g0 + eic2a1g0 + eic3a1g0
+
+  eic1a1g1<-tmpdat$ha1gma1 * (tmpdat$y - tmpdat$qyupa1g1)
+  eic2a1g1<-psa1*svywt*(tmpdat$Qma1g1- Qzupa1g1)
+  eic3a1g1<-Qzupa1g1-tmlea1m1
+  eica1g1<-eic1a1g1 + eic2a1g1 + eic3a1g1
+
+  eic1a0g0<-tmpdat$ha0gma0 * (tmpdat$y - tmpdat$qyupa0g0)
+  eic2a0g0<-psa0*svywt*(tmpdat$Qma0g0- Qzupa0g0)
+  eic3a0g0<-Qzupa0g0-tmlea0m0
+  eica0g0<-eic1a0g0 + eic2a0g0 + eic3a0g0
+
+  #estimands
+  ndeeic<-eica1g0 - eica0g0
+  vareic<-var(ndeeic)/nrow(tmpdat)
+
+  nieeic<-eica1g1 - eica1g0
+  varnieeic<-var(nieeic)/nrow(tmpdat)
+```
+
+
+## More general case
+
+Actually, we would want to have the fixed parameter with the true, unknown $g_{M | a, W}$ and would like $M$ to be continuous/multi-dimensional.
+
+This is a pain to do by hand, but Nima made an easy-to-use package for all of us called medoutcon! He will go through this next.
 
