--- a/03-natural.Rmd
+++ b/03-natural.Rmd
@@ -1,38 +1,41 @@
-# How to choose an estimand: real world example {#estimandirl}
+# How to choose an estimand: Real world example {#estimandirl}
 
-
-## Example: comparative effectivness of two medications for opioid use disorder (OUD)
+## Comparative effectivness of two medications for opioid use disorder (OUD)
 
 ```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics("img/ctndag.pdf")
+knitr::include_graphics(here::here("img/ctndag.pdf"))
 ```
 
-Motivation: Opposite overall treatment effects for homeless vs nonhomeless participants
+_Motivation_: Opposite overall treatment effects for homeless versus
+nonhomeless participants.
 
 ```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics("img/tmleesttotal.pdf")
+knitr::include_graphics(here::here("img/tmleesttotal.pdf"))
 ```
 
 ### Getting specific about the question
 
-To what extent does the indirect effect through mediators of adherence, pain, and depressive symptoms explain the differences in treatment effects on OUD relapse for homeless and nonhomeless individuals?
+To what extent does the indirect effect through mediators of adherence, pain,
+and depressive symptoms explain the differences in treatment effects on OUD
+relapse for homeless and nonhomeless individuals?
 
-What estimand do we want? 
+What estimand do we want?
 
 - Can we set $M=m$ (i.e., same value) for everyone?
 - Are we interested in estimating indirect effects?
 
-$\rightarrow$ So not controlled effects
+$\rightarrow$ So, _not_ controlled direct effect.
 
-- Do we have an intermediate confounder? 
- + Yes, and it's important
- 
-$\rightarrow$ So not natural effects
+- Do we have an intermediate confounder?
+ + Yes, and it's important.
 
-- So, interventional direct and indirect effects
+$\rightarrow$ So, _not_ natural (in)direct effects.
+
+- So, we're left with the interventional direct and indirect effects.
 - Do we want to estimate the path through treatment initiation ($Z$)?
- + Yes, so not conditional versions of these effects
- + Estimands: direct effect: $E(Y_{1,g_0} - Y_{0,g_0})$; indirect effect: $E(Y_{1,g_1} - Y_{1,g_0})$
+ + Yes, so, _not_ the conditional versions of these effects.
+ + Estimands:
+   - Direct effect: $\E(Y_{1,g_0} - Y_{0,g_0})$
+   - Indirect effect: $\E(Y_{1,g_1} - Y_{1,g_0})$
 - Need to incorporate multiple and continuous mediators
-
 
