nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -242,7 +242,7 @@
 
 \title{{[}SER 2021 Workshop{]} Causal Mediation: Modern Methods for Path Analysis}
 \author{Iván Díaz, Nima Hejazi, Kara Rudolph}
-\date{updated: April 19, 2021}
+\date{updated: April 20, 2021}
 
 \begin{document}
 \maketitle
@@ -396,8 +396,8 @@ was built with R version 4.0.5 (2021-03-31), \href{https://pandoc.org/}{pandoc} 
 package & version & source\tabularnewline
 \midrule
 \endhead
-bookdown & 0.21.7 & Github (rstudio/bookdown@b66380e)\tabularnewline
-bslib & 0.2.4.9002 & Github (rstudio/bslib@b2b4e55)\tabularnewline
+bookdown & 0.21.11 & Github (rstudio/bookdown@33c4f70)\tabularnewline
+bslib & 0.2.4.9003 & Github (rstudio/bslib@e09af88)\tabularnewline
 dagitty & 0.3-1 & CRAN (R 4.0.5)\tabularnewline
 data.table & 1.14.0 & CRAN (R 4.0.5)\tabularnewline
 downlit & 0.2.1 & CRAN (R 4.0.5)\tabularnewline
@@ -406,17 +406,17 @@ ggdag & 0.2.3 & CRAN (R 4.0.5)\tabularnewline
 ggfortify & 0.4.11 & CRAN (R 4.0.5)\tabularnewline
 ggplot2 & 3.3.3 & CRAN (R 4.0.5)\tabularnewline
 kableExtra & 1.3.4 & CRAN (R 4.0.5)\tabularnewline
-knitr & 1.31 & CRAN (R 4.0.5)\tabularnewline
-medoutcon & NA & NA\tabularnewline
+knitr & 1.32 & CRAN (R 4.0.5)\tabularnewline
+medoutcon & 0.1.0 & Github (nhejazi/medoutcon@f8f14c4)\tabularnewline
 medshift & 0.1.4 & Github (nhejazi/medshift@f9e11a9)\tabularnewline
 mvtnorm & 1.1-1 & CRAN (R 4.0.5)\tabularnewline
 origami & 1.0.3 & CRAN (R 4.0.5)\tabularnewline
 readr & 1.4.0 & CRAN (R 4.0.5)\tabularnewline
-rmarkdown & 2.7.4 & Github (rstudio/rmarkdown@1450461)\tabularnewline
+rmarkdown & 2.7.11 & Github (rstudio/rmarkdown@e340d75)\tabularnewline
 skimr & 2.1.3 & CRAN (R 4.0.5)\tabularnewline
-sl3 & 1.4.2 & Github (tlverse/sl3@a119d47)\tabularnewline
+sl3 & 1.4.3 & Github (tlverse/sl3@5cddc6c)\tabularnewline
 stringr & 1.4.0 & CRAN (R 4.0.5)\tabularnewline
-tibble & 3.1.0 & CRAN (R 4.0.5)\tabularnewline
+tibble & 3.1.1 & CRAN (R 4.0.5)\tabularnewline
 tidyr & 1.1.3 & CRAN (R 4.0.5)\tabularnewline
 \bottomrule
 \end{longtable}
